Rename package from 'dom-render-library' to 'domrender'
Changed the package name from 'dom-render-library' to 'domrender'.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dom-render-library",
+  "name": "domrender",
   "version": "1.0.0",
   "description": "A DOM rendering library",
   "main": "index.js",
@@ -22,3 +22,4 @@
     "jsdom": "^27.2.0"
   }
 }
+
