--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A DOM rendering library",
   "main": "index.js",
   "scripts": {
-    "test": "node test/serializeTest.js"
+    "test": "node test/serializeTest.js",
+    "test2": "node test/nodeSerializeTest.js"
   },
   "keywords": [
     "dom",
