--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "node test/serializeTest.js",
-    "test2": "node test/nodeSerializeTest.js"
+    "test2": "node test/nodeSerializeTest.js",
+    "listen": "node test/elementAddListenerTest.js"
   },
   "keywords": [
     "dom",
