Add testElementMethods script to package.json for element methods testing

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "node test/serializeTest.js",
     "test2": "node test/nodeSerializeTest.js",
-    "listen": "node test/elementAddListenerTest.js"
+    "listen": "node test/elementAddListenerTest.js",
+    "testElementMethods": "node test/elementMethodsTest.js"
   },
   "keywords": [
     "dom",
