Refactor serialization and parsing logic to improve handling of DOM objects and archive references

--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "A DOM rendering library",
   "main": "index.js",
   "scripts": {
-    "test": "node test/serializeTest.js",
-    "test2": "node test/nodeSerializeTest.js",
-    "listen": "node test/elementAddListenerTest.js",
+    "test": "node test/nodeSerializeTest.js",
     "testElementMethods": "node test/elementMethodsTest.js"
   },
   "keywords": [
